--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dichri",
   "version": "0.1.0",
+  "homepage": "https://barilchaton.github.io/dichri",
   "private": true,
   "dependencies": {
     "@popperjs/core": "2.9.1",
@@ -10,11 +11,13 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2"
   }
